Fix fast animation overlapping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,7 +55,7 @@ body {
   left: 100%;
   position: absolute;
   top: 0;
-  transition: transform 300ms linear;
+  transition: transform 180ms linear;
   width: 100%;
 }
 
